Bug correct found closest position Javadoc most of the classes Standard compliance